// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories storyshots Atoms/Input Input Args Required 1`] = `
<input
  className="css-1sry3m6-StyledInput e39mcal0"
  data-testid="name"
  id="name"
  name="name"
  placeholder="Please write a placeholder"
  type="text"
/>
`;

exports[`Stories storyshots Atoms/Input Input Checkbox 1`] = `
<input
  className="css-1sry3m6-StyledInput e39mcal0"
  data-testid="checkbox"
  id="checkbox"
  name="checkbox"
  type="checkbox"
/>
`;

exports[`Stories storyshots Atoms/Input Input File 1`] = `
<input
  className="css-10p7ol2-StyledInput e39mcal0"
  data-testid="file"
  id="file"
  name="file"
  type="file"
/>
`;

exports[`Stories storyshots Atoms/Input Input Filled 1`] = `
<input
  className="css-1cuurov-StyledInput e39mcal0"
  data-testid="name"
  id="name"
  name="name"
  placeholder="Please write a placeholder"
  type="text"
/>
`;

exports[`Stories storyshots Atoms/Input Input Number 1`] = `
<input
  className="css-1sry3m6-StyledInput e39mcal0"
  data-testid="number"
  id="number"
  name="number"
  type="number"
/>
`;

exports[`Stories storyshots Atoms/Input Input Outlined 1`] = `
<input
  className="css-14yzi7b-StyledInput e39mcal0"
  data-testid="name"
  id="name"
  name="name"
  placeholder="Please write a placeholder"
  type="text"
/>
`;

exports[`Stories storyshots Atoms/Input Input Password 1`] = `
<input
  className="css-1mbjrzr-StyledInput e39mcal0"
  data-testid="password"
  id="password"
  name="password"
  placeholder="Password"
  type="password"
/>
`;

exports[`Stories storyshots Atoms/Input Input Radio 1`] = `
<input
  className="css-1sry3m6-StyledInput e39mcal0"
  data-testid="radio"
  id="radio"
  name="radio"
  type="radio"
/>
`;

exports[`Stories storyshots Atoms/Input Input Range 1`] = `
<input
  className="css-1sry3m6-StyledInput e39mcal0"
  data-testid="range"
  id="range"
  name="range"
  type="range"
/>
`;

exports[`Stories storyshots Atoms/Input Input Standard 1`] = `
<input
  className="css-1sry3m6-StyledInput e39mcal0"
  data-testid="name"
  id="name"
  maxLength={8}
  minLength={4}
  name="name"
  placeholder="Please write a placeholder"
  type="text"
/>
`;
